Final fix for font on mobile devices. Added backup font for when the first choice is not available.

--- a/styles.css
+++ b/styles.css
@@ -15,14 +15,9 @@
     float: center;
 }
 
-@font-face {
-    font-family: 'Mistral';
-    src: url('./fonts/MISTRAL.TTF');
-}
-
 h1 {
     text-align:center;
-    font-family: "Mistral";
+    font-family: mistral, courier;
     font-size:5em;
     font-weight: bold;
 }
@@ -37,21 +32,21 @@ h2 {
 }
 
 h3 {
-    font-family: "Mistral";
+    font-family: mistral, courier;
     text-align: center;
     font-size: 3em;
     font-weight: bold;
 }
 
 h4 {
-    font-family: "Mistral";
+    font-family: mistral, courier;
     text-align: center;
     font-size:;
     font-weight: bold;
 }
 
 .menubartxt {
-    font-family:courier;
+    font-family:mistral, courier;
     font-weight: bold;
     text-align: center;
     font-size: 36px;
@@ -91,7 +86,7 @@ h4 {
     width: 100%; /* Full-width */
     background-color: #555; /* Dark-grey background */
     overflow: hidden; /* Overflow due to float */
-    font-family: courier;
+    font-family: mistral, courier;
 }
 
 .icon-bar a {
@@ -102,7 +97,7 @@ h4 {
     transition: all 0.3s ease; /* Added transition for hover effects */
     color: white; /* White text color */
     font-size: 36px; /* Increased font size */
-    font-family: courier;
+    font-family: mistral, courier;
 }
 
 .icon-bar a:hover {
@@ -167,7 +162,7 @@ h4 {
   text-decoration: none;
   display: block;
   text-align: center;
-  font-family: courier;
+  font-family: mistral, courier;
   font-weight: bold;
   width: 100%;
 }
